--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-    {cowlib,".*",{git,"https://github.com/AmazeGame/cowlib.git",{branch,"master"}}},
-    {ranch,".*",{git,"https://github.com/AmazeGame/ranch.git",{branch,"master"}}},
+    {cowlib,".*",{git,"https://github.com/AmazeGame/cowlib.git",{tag,"2.11.0"}}},
+    {ranch,".*",{git,"https://github.com/AmazeGame/ranch.git",{tag,"1.8.0"}}}
 ]}.
 {erl_opts, [debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard,warn_missing_spec,warn_untyped_record]}.
